# secureops

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  bad_cache_server.py  bad_cors_server.py  bad_information_disclosure_server.py  docker-compose.ci.yml  docker-compose.yml  launch_dev.sh  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
backend/: .dockerignore  docker-compose.backend.betatest.limited.yml  docker-compose.backend.betatest.yml
backend/admin-service/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/common/: .flake8  Makefile  pyproject.toml  requirements-dev.txt
backend/common/common/: __init__.py  async_database.py  async_jobs.py  blacklist.py  cognito.py  config_base.py  crud.py  datetime_utils.py  env_utils.py  error_handlers.py  health.py  jwt_verifier.py  logging_config.py  middleware.py  schemas.py  ssrf.py  url_helpers.py  url_utils.py  url_validator.py  version.py
backend/common/template_common.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/common/tests/: __init__.py  test_blacklist.py  test_config_base.py  test_datetime_utils.py  test_env_utils.py  test_health.py  test_schemas.py  test_url_helpers.py  test_url_utils.py
backend/crawl-service/: .env.example  .flake8  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/gateway/: .env.example  .flake8  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/metier-a-service/: .flake8  Dockerfile  pyproject.toml  requirements.txt
backend/metier-b-service/: .flake8  Dockerfile  pyproject.toml  requirements.txt
backend/metier-c-service/: Dockerfile
backend/pdf-service/: .env.example  .flake8  Dockerfile  pyproject.toml  requirements.txt
backend/scan-service/: .flake8  Dockerfile  (+2 more)
docs/: A-PENSER-PLUS-TARD.md  API-PUBLIQUE.md  ARCHITECTURE.md  AUDIT-TEMPLATE.md  CONTRIBUTING.md  DEPLOIEMENT-AWS.md  DEPLOIEMENT.md  INTEGRATION-GITHUB-ACTION.md  PDF-I18N.md  RATE-LIMITING.md  README.md  ROADMAP-MVP-0.1.0.md  ROADMAP-MVP-0.2.0.md  ROADMAP-MVP.md  VARIABLES-ENVIRONNEMENT.md  VERIFICATION-AUTORISATION.md  verification-dns.md
frontend/: .env.example  Dockerfile  README.md  eslint.config.mjs  jest.config.mjs  next.config.ts  package-lock.json  package.json
(+1030 files in other folders)
