[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "template-common"
version = "0.2.0"
description = "Code partagé entre les micro-services du template fullstack."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "PyJWT>=2.10.0",
    "cryptography>=43.0.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
]

[tool.setuptools.packages.find]
include = ["common*"]

[tool.black]
line-length = 150
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 150

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -ra"
