[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "template-common"
version = "0.2.0"
description = "Code partagé entre les micro-services du template fullstack."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "PyJWT>=2.10.0",
    "cryptography>=43.0.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=25.0.0",
    "isort>=5.10.0",
    "flake8>=6.0.0",
    "flake8-bugbear>=23.0.0",
    "flake8-comprehensions>=3.14.0",
    "flake8-docstrings>=1.7.0",
    "flake8-plugin-utils>=1.3.0",
    "flake8-pytest-style>=1.7.0",
    "flake8-quotes>=3.3.0",
    "flake8_simplify>=0.20.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["common*"]

[tool.black]
line-length = 150
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 150

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -ra"
asyncio_mode = "auto"
